--- a/index.css
+++ b/index.css
@@ -1,21 +1,22 @@
-
 * {
   box-sizing: border-box;
 }
-
 body {
   text-align: center;
   font-family: system-ui, sans-serif;
 }
-
 img {
-  max-width: 100%;
+  height: 200px;
 }
-
 .pick {
+  margin: 1em;
   display: none;
+  font-size: 1.5em;
+  border-radius: 0.5em;
+  padding: 1em;
+  appearance: none;
+  border: gray;
 }
-
 #question {
   opacity: 0;
   animation: question 1s ease;
@@ -23,6 +24,30 @@ img {
   animation-delay: 5s;
 }
 
+.description {
+  margin-bottom: 1em;
+}
+
+.options {
+  margin-top: 2em;
+}
+
+.options button {
+  appearance: none;
+  border: 1px outset gainsboro;
+  font-size: 2em;
+  padding: 1em;
+  border-radius: 0.5em;
+  font-weight: bold;
+}
+
+.options .true {
+  background-color: rgba(0, 255, 0, 0.1)
+}
+
+.options .false {
+  background-color: rgba(255, 0, 0, 0.1)
+}
 @keyframes question {
   from {
     opacity: 0;
